# mechanical-technical-document-evaluation-harness

./: .gitattributes  .gitignore  AGENTS.md  COPY_INSTRUCTIONS.md  MEMORY_UPDATE.md  MODERNIZATION_MANIFEST.md  NEXT_STEPS.md  PROJECT_CONTEXT.md  PROJECT_INSTRUCTIONS_5_6.md  README.md  README_MODERNIZATION_PATCH.md  RUN_DEMO.bat  gantt.xlsx  gantt.xlsx.inspect.ndjson  pyproject.toml
docs/: additional-case-verification.md  architecture.md  candidate-artifact-contract.md  case_review_checklist.md  failure_taxonomy.md  limitations.md  month_1_scope.md  out_of_scope.md  portfolio_demo.md  release_notes_v0.2.0.md  seed-case-verification.md
governance/: ai_management_system.json
schemas/: ai_management_system.schema.json  candidate.schema.json  case.schema.json  environment.schema.json  evaluator.schema.json  package_manifest.schema.json  package_result.schema.json  result.schema.json  task.schema.json
scripts/: run_benchmark_authoring_control_proof.py  run_mvp_baseline.py  run_package_assurance_development_benchmark.py  run_package_assurance_publication_sentinel.py  run_portfolio_demo.py
tests/: package_relationship_support.py  test_ai_governance.py  test_benchmark_split.py  test_candidate_loader.py  test_cli_audit_package.py  test_cli_evaluate.py  test_deterministic_checks.py  test_example_candidates.py  test_gate_engine.py  test_held_out_package_fixtures.py  test_mech_004_bom_reconciliation.py  test_mech_005_thermal_expansion.py  test_mvp_baseline.py  test_numeric_tolerance.py  test_package_audit_publication.py  test_package_authoring_controls.py  test_repository.py  (+19 more)
(+362 files in other folders)
